web/api: add commenting
