# web/openapi.yaml
@@ -341,6 +341,50 @@ paths:
                   msg:
                     example: You can only edit your own posts, unless you are an admin.
         401: { $ref: "#/components/responses/unauthorized" }
+  /topComment:
+    post:
+      tags: [Comments]
+      summary: Add a comment to a post
+      security: [bearerAuth: []]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                text:
+                  type: string
+                PostId:
+                  type: integer
+      responses:
+        200:
+          description: Success!
+        400:
+          description: You can't submit a comment with no text!
+        401: { $ref: "#/components/responses/unauthorized" }
+        404:
+          description: No such post!
+  /childComment:
+    post:
+      tags: [Comments]
+      summary: Add a child comment to a comment
+      security: [bearerAuth: []]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                text:
+                  type: string
+                ParentId:
+                  type: integer
+      responses:
+        200:
+          description: Success!
+        400:
+          description: You can't submit a comment with no text!
+        401: { $ref: "#/components/responses/unauthorized" }
+        404:
+          description: No such parent comment!
   /postVote/{id}:
     post:
       parameters: [{ $ref: "#/components/parameters/idInPath" }]
